Bug 92885 - Incorrect cell border drawing in DOC file after saving in 5.0
Summary: Incorrect cell border drawing in DOC file after saving in 5.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.3 rc
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-07-23 07:19 UTC by bazilio
Modified: 2016-10-25 19:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample documents (9.81 KB, application/x-zip-compressed)
2015-07-23 07:19 UTC, bazilio
Details
test case 5.0.4 (109.60 KB, application/x-zip-compressed)
2015-07-26 17:55 UTC, bazilio
Details
example of vertical borders (43.61 KB, application/vnd.oasis.opendocument.text)
2015-07-30 21:04 UTC, ribotb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bazilio 2015-07-23 07:19:13 UTC
Created attachment 117386 [details]
sample documents

I have one document created in ms office.
In 4.4 it prints fine.

When I first try to open 44.doc in 5.0 it looks fine,
when I try to ptint document it looks fine.

But when I try to save it in 5.0 into 50.doc document contains incorrect drawing of vertical cell borders.

You must look at last string in the document. 
It contains a table with invisible vertical borders in a table.
In 5.0 these borders becomes visible.
Comment 1 bazilio 2015-07-23 07:28:33 UTC
Workaround. Open document in 4.4 and save as odt.
Comment 2 tommy27 2015-07-26 07:04:28 UTC
5.0 RC4 is out. please retest.
also tell the exact Windows version you use and the model of your printer.
is PDF export affected as well by the bug?
Comment 3 bazilio 2015-07-26 17:55:22 UTC
Created attachment 117452 [details]
test case 5.0.4

Even in 5.0.4 error repeated.

1.doc - orignal doc
2.doc - 1.doc saved in 5.0.4

1.pdf - pdf from original doc
2.pdf - 1.doc saved in 5.0.4

Steps to reproduce
1. Open 1.doc in 5.0.4
2. Print doc, it looks ok
3. Save it as 2.doc
4. Print doc, it looks ok
5. Close it
6. Open 2.doc
7. Print out it looks bad
Comment 4 tommy27 2015-07-27 05:34:59 UTC
thanks for retesting but please answer other questions from comment 2
Comment 5 ribotb 2015-07-30 21:04:02 UTC
Created attachment 117544 [details]
example of vertical borders
Comment 6 ribotb 2015-07-30 21:05:53 UTC
Hi,

Not easy to see :-)), but (on Windows 7/x86) it seems there are some differences between original document (44.doc) opened in LO 4.4.5.2 and the same document opened and saved in LO 5.0.0.4, especially vertical borders which appears with LO 4.0.0.4. 
For example, see attachment in previous comment.

Bernard
Comment 7 raal 2015-08-01 05:29:21 UTC
Reproducible with Version: 5.1.0.0.alpha1+
Build ID: 2d9db406d301d722649ca539cacad823b89191ca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-07-31_00:59:07

No problem in Verze: 4.4.2.2,ID sestavení: 40m0(Build:2) -> regression
Comment 8 Matthew Francis 2015-08-11 08:12:40 UTC
This seems to have begun at the below commit. Adding Cc: to noelgrandin@gmail.com; could you possibly take a look at this one? Thanks

    commit 4b66829390b286010b37b37ec1537a320d8cea8f
    Author:     Noel Grandin <noel@peralex.com>
    AuthorDate: Mon Mar 30 11:20:37 2015 +0200
    Commit:     Noel Grandin <noel@peralex.com>
    CommitDate: Wed Apr 1 09:36:19 2015 +0200
    
        convert BOX_LINE and BOXINFO_LINE to enum class
    
        since their usage is intertwined.
    
        Also introduce new o3tl utilities enumrange and enumarray to make
        working with scoped enums a little simpler.
    
        Change-Id: I2e1cc65dd7c638e59f17d96dfae504747cad6533
Comment 9 Commit Notification 2015-08-11 13:02:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78446df26f45e2a71187873726388c9d2f6ba6e5

tdf#92885 - Incorrect cell border drawing in DOC file after saving in 5.0

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-08-13 10:04:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f1d6909f519526312d9c9384b715a4db730eafc&h=libreoffice-5-0

tdf#92885 - Incorrect cell border drawing in DOC file after saving in 5.0

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-17 10:29:39 UTC Comment hidden (obsolete)