tdf#92885 - Incorrect cell border drawing in DOC file after saving in 5.0

caused by commit 4b66829390b286010b37b37ec1537a320d8cea8f
"convert BOX_LINE and BOXINFO_LINE to enum class"

Change-Id: I23eb359a40035dd40bdb60703de567b1c328e793